@@ -242,3 +242,5 @@ Contributors
 - Ilja Everila, 2015/02/05
 
 - Geoffrey T. Dairiki, 2015/02/06
+
+- David Glick, 2015/02/12
